# Goldflow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
db/: CLAUDE.md
db/init/: 01_create_test_db.sql
db/migrations/: 001_raw_schema.sql  002_staging_schema.sql  003_features_schema.sql
docs/superpowers/plans/: 2026-06-26-stage1-ingestion.md  2026-06-27-stage2-preprocessing.md  2026-06-29-stage3-feature-engineering.md
docs/superpowers/specs/: 2026-06-26-gold-data-pipeline-prompt-design.md  2026-06-26-stage1-ingestion-design.md  2026-06-27-stage2-preprocessing-design.md  2026-06-29-stage3-feature-engineering-design.md
src/gold_pipeline/db/: CLAUDE.md  reader.py  writer.py
src/gold_pipeline/features/: CLAUDE.md  assemble.py  config.py  lagged.py  macro_features.py  quality.py  run.py  target.py  technical.py
src/gold_pipeline/ingestion/: CLAUDE.md  config.py  http.py  quality.py  run.py
src/gold_pipeline/ingestion/sources/: CLAUDE.md  gold_prices.py  (+1 more)
src/gold_pipeline/preprocessing/: CLAUDE.md  align_macro.py  calendar.py  clean_gold.py  quality.py  run.py
tests/db/: test_features_run.py  test_reader.py  test_writer.py
tests/features/: test_assemble.py  test_config.py  test_lagged.py  test_macro_features.py  test_quality.py  test_target.py  test_technical.py
tests/ingestion/: test_config.py  test_http.py  test_quality.py  test_raw_writer.py  test_run.py  test_sources_gold.py  test_sources_macro.py
tests/preprocessing/: test_align_macro.py  test_calendar.py  test_clean_gold.py  test_quality.py  test_run.py
(+2 files in other folders)
